# augment-token-mng

./: .gitignore  CI-CD-IMPLEMENTATION-SUMMARY.md  DEMO_INSTRUCTIONS.md  Dockerfile.build  Dockerfile.cross  Dockerfile.dev  FIRST-SYNC-COMPLETE.md  INTEGRATION_GUIDE.md  LOCAL-TEST-COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.en.md  README.md  SETUP-COMPLETE.md  build.sh  ci-cd-setup-report.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/: atm.desktop
src-tauri/capabilities/: default.json
src-tauri/src/: api_server.rs  augment_oauth.rs  augment_user_info.rs  gptmail.rs  http_client.rs  key_redeem.rs  lib.rs  main.rs  outlook_manager.rs  proxy_config.rs
src-tauri/src/core/: api_server.rs  app_commands.rs  http_client.rs  path_manager.rs  proxy_config.rs  proxy_helper.rs  spotlight.rs  subscription_monitor.rs  telegram.rs  tray.rs
src-tauri/src/data/: database.rs  storage.rs
src-tauri/src/data/bookmark/: commands.rs  local_storage.rs  mapper.rs  migrations.rs  mod.rs  models.rs  storage.rs
src-tauri/src/data/database/: config.rs  connection.rs  migrations.rs  openai.rs  windsurf.rs
src-tauri/src/data/database/antigravity/: migrations.rs
src-tauri/src/data/database/augment/: migrations.rs
src-tauri/src/data/database/claude/: migrations.rs  mod.rs  operations.rs
src-tauri/src/data/database/cursor/: migrations.rs
src-tauri/src/data/database/openai/: migrations.rs
src-tauri/src/data/database/windsurf/: migrations.rs
src-tauri/src/data/storage/: antigravity.rs  augment.rs  claude.rs  cursor.rs  openai.rs  traits.rs  windsurf.rs
src-tauri/src/data/storage/antigravity/: dual_storage.rs  local_storage.rs  mapper.rs  postgres_storage.rs  traits.rs
src-tauri/src/data/storage/augment/: dual_storage.rs  local_storage.rs  postgres_storage.rs  traits.rs
src-tauri/src/data/storage/claude/: mapper.rs  (+1 more)
src-tauri/src/data/subscription/: commands.rs  mapper.rs  migrations.rs  mod.rs  models.rs  storage.rs
src-tauri/src/database/: connection.rs  migrations.rs
src-tauri/src/features/: bookmarks.rs  mail.rs
src-tauri/src/features/mail/: gptmail.rs  gptmail_storage.rs  hme.rs  hme_storage.rs  outlook.rs  outlook_storage.rs
src-tauri/src/features/raindrop/: client.rs  commands.rs  mod.rs  models.rs
src-tauri/src/storage/: dual_storage.rs  postgres_storage.rs  traits.rs
(+159 files in other folders)
